--- a/scripts/ch1.2_release.Rmd
+++ b/scripts/ch1.2_release.Rmd
@@ -47,15 +47,6 @@ germany_sf <- st_as_sf(germany_sp) %>%
   
                   # Add english names
                   mutate(VARNAME_1 = ifelse(is.na(VARNAME_1), NAME_1, VARNAME_1)) 
-
-# Make data
-# set.seed(123)
-# sales_data_tbl <- tibble(
-#   date = bike_orderlines_tbl$order_date,
-#   category_1 = unique(bike_orderlines_tbl$category_1),
-#   category_2 = unique(bike_orderlines_tbl$category_2), 
-#   sales = bike_orderlines_tbl$total_price
-# )
 ```
 
 
@@ -150,13 +141,17 @@ plot_ly(geo_plot_tbl,
 # Sample Map Data (Germany states)
 germany <- st_as_sf(maps::map("world", "Germany", plot = FALSE, fill = TRUE))
 
+
 output$plot_2 <- renderPlotly({
+  req(sales_data_filtered())
+                                    print("sales_data_filtered")
+                                    print(sales_data_filtered())
   plot_data <- sales_data_filtered() %>%
     group_by(state = sample(germany$ID, n(), replace = TRUE)) %>%
-    summarise(total_sales = sum(total_price))
+    summarise(total_sales = sum(sales_data_filtered()$total_price))
 
   ggplot() +
-    geom_sf(data = germany, aes(geometry = geometry, fill = total_sales)) +
+    geom_sf(data = germany, aes(geometry = geometry, fill = plot_data$total_sales)) +
     scale_fill_viridis_c(option = "viridis", labels = dollar) +
     theme_void() +
     labs(title = "Sales by Region")
@@ -164,18 +159,6 @@ output$plot_2 <- renderPlotly({
 
 plotlyOutput(outputId = "plot_2")
 ```
-
-```{r}
-# Reactive Filter
-# sales_data_filtered <- reactive({
-#   bike_orderlines_tbl %>%
-#     filter(category_1 %in% input$checkbox_group_1) %>%
-#     filter(category_2 %in% input$picker_input_2) %>%
-#     filter(order_date >= input$date_range[1] & order_date <= input$date_range[2])
-# })
-
-```
-
 
 Column {data-width=750}
 -----------------------
@@ -200,16 +183,7 @@ shinyWidgets::radioGroupButtons(
 output$plot_1 <- renderPlotly({
   # Ensure sales_data_filtered is non-null
   req(sales_data_filtered())
-  
-  # Debugging output
-  print("Filtered Data")
-  print(head(sales_data_filtered()))
-  
-  print("input")
-  print(input)
-  print("input$time_unit")
-  print(input$time_unit)
-  
+
   # Aggregate data based on selected time unit
   sales_data_aggregated <- sales_data_filtered() %>%
     mutate(time_period = case_when(
@@ -221,56 +195,8 @@ output$plot_1 <- renderPlotly({
     )) %>%
     group_by(time_period) %>%
     summarise(sales = sum(total_price), .groups = 'drop')
-  
-  print("sales_data_filtered()")
-  print(sales_data_filtered())
-  print("time_period")
-  print(sales_data_filtered()$time_period)
-  print("sales_data_aggregated")
-  print(sales_data_aggregated)
-  
-  # Debugging output
-  print("Aggregated Data")
-  print(head(sales_data_aggregated))
 
-  # Plot
-  # p <- ggplot(sales_data_aggregated, aes(x = time_period, y = sales)) +
-  #   geom_line(color = "blue") +
-  #   geom_ribbon(aes(ymin = sales - sd(sales), ymax = sales + sd(sales)), fill = "grey", alpha = 0.2) +
-  #   labs(title = "Sales Over Time", x = "Time Period", y = "Sales") +
-  #   theme_minimal() +
-  #   theme(legend.position = "none")  # Remove legend
-  
-  date_format <- "%B %d, %Y"
-   data_tbl <- sales_data_filtered() %>%
-    
-    dplyr::select(order_date, total_price) %>%
-    
-    mutate(date_rounded = floor_date(order_date, unit = )) %>%
-    
-    group_by(date_rounded) %>%
-    summarise(total_sales = sum(total_price)) %>%
-    ungroup() %>%
-    
-    mutate(label_text = str_glue("Sales: {format_to_euro(total_sales)}
-                                 Date: {date_rounded %>% format(date_format)}"))
-	# Make Plot
-	# p <- data_tbl %>%
-	# 	ggplot(aes(x = date_rounded, y = total_sales)) +
-	# 	# Geoms
-	# 	geom_line(color = "black") +
-	# 	geom_smooth(method = "loess", span = 0.2) +
-	# 	# Formatting
-	# 	scale_y_continuous(labels = euro_format()) +
-	# 	expand_limits(y = 0) +
-	# 	theme_minimal() +
-	# 	labs(
-	# 	  title = "Total Sales",
-	# 	  y = "Revenue (Euro)",
-	# 	  x = ""
-	# 	) + 
-	# 	theme(legend.position = "none")
-  p <- sales_data_aggregated %>%
+    p <- sales_data_aggregated %>%
 		ggplot(aes(x = time_period, y = sales)) +
 		# Geoms
 		geom_line(color = "black", size = 0.3) +
@@ -286,9 +212,6 @@ output$plot_1 <- renderPlotly({
 		) + 
 		theme(legend.position = "none")
 
-
-  
-  
   
   ggplotly(p)
 })
@@ -299,27 +222,10 @@ plotlyOutput(outputId = "plot_1")
 ```{r}
 # Reactive Filter with Apply Button
 sales_data_filtered <- eventReactive(input$apply, {
-  # print("input$date_range")
-  # print(input$date_range)
-  # print("input$picker_input_1")
-  # print(input$checkbox_group_1)
-  # print("input$picker_input_2")
-  # print(input$picker_input_2)
-  # print("bike_orderlines_tbl$order_date")
-  # print(head(bike_orderlines_tbl$order_date))
-  # print("bike_orderlines_tbl$category_1")
-  # print(head(bike_orderlines_tbl$category_1))
-  # print("bike_orderlines_tbl$category_2")
-  # print(head(bike_orderlines_tbl$category_2))
-  
   filtered <- bike_orderlines_tbl %>%
     filter(category_1 %in% input$checkbox_group_1) %>%
     filter(category_2 %in% input$picker_input_2) %>%
     filter(order_date >= input$date_range[1] & order_date <= input$date_range[2])
-  
-  # Debugging output
-  print("Filtered data on Apply button press")
-  print(filtered)
   
   filtered
 })
